[package]
name = "bxcan"
version = "0.3.0"
authors = [
    "Jonas Schievink <jonasschievink@gmail.com>",
    "Timo Kröger <timokroeger93@gmail.com>",
]
edition = "2018"
description = "STM32 bxCAN peripheral driver"
documentation = "https://docs.rs/bxcan/"
repository = "https://github.com/jonas-schievink/bxcan.git"
keywords = ["can", "hal", "bus"]
categories = ["no-std", "embedded"]
readme = "README.md"
license = "0BSD"

[workspace]
members = ["testsuite"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
bitflags = "1.2.1"
defmt = "0.1.3"
vcell = "0.1.2"
nb = "1.0.0"
embedded-can = "0.3"

[profile.test]
opt-level = "s"
lto = true

# cargo-release configuration
[package.metadata.release]
tag-message = "{{version}}"
no-dev-version = true
pre-release-commit-message = "Release {{version}}"

# Change the changelog's `Unreleased` section to refer to this release and
# prepend a new `Unreleased` section
[[package.metadata.release.pre-release-replacements]]
file    = "CHANGELOG.md"
search  = "## Unreleased\n"
replace = """
## Unreleased

No changes.

## [{{version}} - {{date}}](https://github.com/jonas-schievink/bxcan/releases/tag/v{{version}})
"""

# Bump the version inside the example manifest in `README.md`
[[package.metadata.release.pre-release-replacements]]
file    = "README.md"
search  = 'bxcan = "[a-z0-9\\.-]+"'
replace = 'bxcan = "{{version}}"'

# Bump the version referenced by the `html_root_url` attribute in `lib.rs`
[[package.metadata.release.pre-release-replacements]]
file    = "src/lib.rs"
search  = "https://docs.rs/bxcan/[a-z0-9\\.-]+"
replace = "https://docs.rs/bxcan/{{version}}"
