[package]
name = "bxcan"
version = "0.6.2"
authors = [
    "Jonas Schievink <jonasschievink@gmail.com>",
    "Timo Kröger <timokroeger93@gmail.com>",
]
edition = "2018"
description = "STM32 bxCAN peripheral driver"
documentation = "https://docs.rs/bxcan/"
repository = "https://github.com/stm32-rs/bxcan.git"
keywords = ["can", "hal", "bus"]
categories = ["no-std", "embedded"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[workspace]
members = ["testsuite"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
bitflags = "1.2.1"
vcell = "0.1.2"
nb = "1.0.0"

[dependencies.embedded-can-03]
version = "0.3"
optional = true
package = "embedded-can"

[dependencies.defmt]
optional = true
version = ">=0.2.3,<0.4.0"

[features]
unstable-defmt = ["defmt"]

[profile.test]
opt-level = "s"
# FIXME: Turning LTO off makes the testsuite executables 2.5x larger.
# Turning it on makes `cargo test` on the host take a bit long to build.
lto = true

# cargo-release configuration
[package.metadata.release]
tag-message = "{{version}}"
dev-version = false
pre-release-commit-message = "Release {{version}}"

# Change the changelog's `Unreleased` section to refer to this release and
# prepend a new `Unreleased` section
[[package.metadata.release.pre-release-replacements]]
file    = "CHANGELOG.md"
search  = "## Unreleased\n"
replace = """
## Unreleased

No changes.

## [{{version}} - {{date}}](https://github.com/stm32-rs/bxcan/releases/tag/v{{version}})
"""

# Bump the version inside the example manifest in `README.md`
[[package.metadata.release.pre-release-replacements]]
file    = "README.md"
search  = 'bxcan = "[a-z0-9\\.-]+"'
replace = 'bxcan = "{{version}}"'

# Bump the version referenced by the `html_root_url` attribute in `lib.rs`
[[package.metadata.release.pre-release-replacements]]
file    = "src/lib.rs"
search  = "https://docs.rs/bxcan/[a-z0-9\\.-]+"
replace = "https://docs.rs/bxcan/{{version}}"
