[package]
authors = ["Jonas Schievink <jonasschievink@gmail.com>"]
name = "testsuite"
publish = false
edition = "2021"
version = "0.0.0"

[lib]
name = "testsuite"
test = false

[[test]]
name = "integration"
harness = false

[[test]]
name = "interrupts"
harness = false

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
defmt = "0.3.0"
defmt-rtt = "0.3.0"
defmt-test = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
# NB: We use F107 here, which seems to share its SVD file with the F105. The difference is that the
# 107 has Ethernet, but we don't use that.
stm32f1 = { version = "0.14.0", features = ["stm32f107", "rt"] }
nb = "1.0.0"
irq = "0.2.3"

[dependencies.bxcan]
path = ".."
features = ["unstable-defmt"]
